[workspace]
members = [
    "fusen-macro/derive-macro",
    "fusen-macro/procedural-macro",
    "fusen",
    # "examples",
]
resolver = "2"

[workspace.package]
authors = ["kwsc98 <kwsc98@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
description = "RPC framework for service registration and discovery through API exposure, compatible with Dubbo3 protocol, intertunable with Java projects"

[workspace.dependencies]
fusen-common = "0.8.1"
fusen-derive-macro = { path = "fusen-macro/derive-macro", version = "0.8.1" }
fusen-procedural-macro = { path = "fusen-macro/procedural-macro", version = "0.8.1" }
