[workspace]
members = [
    "fusen-internal-common",
    "fusen-macro/derive-macro",
    "fusen-macro/procedural-macro",
    "fusen-register",
    "fusen",
    "examples",
]
resolver = "2"

[workspace.package]
authors = ["kwsc98 <kwsc98@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
description = "RPC framework for service registration and discovery through API exposure, compatible with Dubbo3 protocol, intertunable with Java projects"

[workspace.dependencies]
fusen-internal-common = { path = "fusen-internal-common", version = "0.8.5" }
fusen-derive-macro = { path = "fusen-macro/derive-macro", version = "0.8.5" }
fusen-procedural-macro = { path = "fusen-macro/procedural-macro", version = "0.8.8" }
fusen-register = { path = "fusen-register", version = "0.8.5" }
fusen-rs = { path = "fusen", version = "0.8.8" }

serde = "1.0.226"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.16"
tracing = "0.1.41"
