[package]
name = "examples"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
fusen-rs.workspace = true
fusen-register.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
