[package]
name = "examples"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
publish = false


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "client-pt"
path = "src/client_pt.rs"

[[bin]]
name = "hot-config"
path = "src/hot_config.rs"


[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

fusen-rs = "0.8.7"
fusen-common = "0.8.8"
rand = "0.9.2"
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = [
    "rt-tokio",
    "rt-tokio-current-thread",
    "experimental_trace_batch_span_processor_with_async_runtime",
] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
