[package]
name = "fusen-common"
version = "0.6.19"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true


[dependencies]
fusen-procedural-macro.workspace = true
#网络协议处理
tokio.workspace = true
http-body-util.workspace = true
hyper.workspace = true
http.workspace = true


#json序列化
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
bytes.workspace = true
percent-encoding.workspace = true
toml.workspace = true
serde_yaml.workspace = true

#日志处理
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true
pretty_env_logger.workspace = true
chrono.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-appender.workspace = true

#注册中心
nacos-sdk.workspace = true
rand.workspace = true
local-ip-address.workspace = true
