[package]
name = "fusen-rs"
version = "0.6.23"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true


[dependencies]
fusen-common.workspace = true
fusen-procedural-macro.workspace = true


#网络协议处理
tokio.workspace = true
hyper.workspace = true
hyper-tls.workspace = true
hyper-util.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
bytes.workspace = true
futures.workspace = true
async-trait.workspace = true
async-recursion.workspace = true
h2.workspace = true
futures-util.workspace = true
urlencoding.workspace = true

#日志处理
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true
pretty_env_logger.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true


#json序列化
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

prost = "0.13.1"
prost-types = "0.13.1"

pin-project-lite.workspace = true
lazy_static.workspace = true

#注册中心
nacos-sdk.workspace = true
rand.workspace = true
