[package]
name = "fusen-rs"
version = "0.8.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true


[dependencies]
fusen-common.workspace = true
fusen-procedural-macro.workspace = true

#网络协议处理
tokio = "1.46.1"
serde = "1.0.219"
serde_json = "1.0.140"
http = "1.3.1"
bytes = "1.10.1"
http-body-util = "0.1.3"
hyper = "1.6.0"