[package]
name = "fusen-rs"
version = "0.8.7"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true


[dependencies]
fusen-procedural-macro.workspace = true
fusen-internal-common.workspace = true
fusen-register.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

#网络协议处理
http = "1.3.1"
bytes = "1.10.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-tls = { version = "0.6.0" }
hyper-util = { version = "0.1.17", features = ["full"] }
rand = "0.9.2"
urlencoding = "2.1.3"
prost = "0.14.1"
async-recursion = "1.1.1"
