[package]
name = "krpc-common"
version = "0.1.0"
edition.workspace = true

[dependencies]
#json序列化
serde.workspace = true 
serde_json.workspace = true 
uuid.workspace = true

percent-encoding.workspace = true

#日志处理
tracing.workspace = true 
tracing-futures.workspace = true 
tracing-subscriber.workspace = true 
pretty_env_logger.workspace = true 