[package]
name = "krpc-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
krpc-common = { path = "../krpc-common"}
krpc-macro = { path = "../krpc-macro"}


#网络协议处理
tokio.workspace = true 
hyper.workspace = true 
http.workspace = true 
http-body.workspace = true 
http-body-util.workspace = true 
bytes.workspace = true 
futures.workspace = true 
async-trait.workspace = true 

#日志处理
tracing.workspace = true 
tracing-futures.workspace = true 
tracing-subscriber.workspace = true 
pretty_env_logger.workspace = true 

#json序列化
serde.workspace = true 
serde_json.workspace = true 
uuid.workspace = true

pin-project-lite.workspace = true 
lazy_static.workspace = true
