[package]
name = "krpc-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true


[dependencies]
krpc-common = { path = "../krpc-common" ,version = "0.2.0"}
krpc-macro = { path = "../krpc-macro" ,version = "0.2.0"}


#网络协议处理
tokio.workspace = true
hyper.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
bytes.workspace = true
futures.workspace = true
async-trait.workspace = true
async-recursion.workspace = true
h2.workspace = true

#日志处理
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true
pretty_env_logger.workspace = true

#json序列化
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

prost = "0.12.3"
prost-types = "0"
protobuf-json-mapping = '3.3.0'
flate2 = "1.0"
bzip2 = "0.4.4"
tower = "0.4.13"

pin-project-lite.workspace = true
lazy_static.workspace = true

#注册中心
zookeeper-client.workspace = true

rand.workspace = true
