[package]
name = "krpc-macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[lib]
proc-macro = true

[dependencies]
krpc-common.workspace = true
serde_json.workspace = true
quote = "1"
syn = "2"
proc-macro2.workspace = true
