[package]
name = "krpc-macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[lib]
proc-macro = true

[dependencies]
krpc-common.workspace = true
serde_json.workspace = true
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2.workspace = true
