[package]
name = "fusen-procedural-macro"
version = "0.6.14"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[lib]
proc-macro = true

[dependencies]
fusen-derive-macro.workspace = true
#json序列化
serde.workspace = true
serde_json.workspace = true
quote = "1.0.36"
syn = { version = "2.0.71", features = ["full"] }
proc-macro2.workspace = true
