[package]
name = "fusen-procedural-macro"
version = "0.8.6"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[lib]
proc-macro = true

[dependencies]
fusen-derive-macro.workspace = true

#json序列化
serde = "1.0.219"
serde_json = "1.0.140"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
proc-macro2 = "1.0.95"
